find_package (Armadillo)
find_package (Boost     COMPONENTS  system)
find_package (Eigen3)
find_package (OpenCV    COMPONENTS  core)

if (ARMADILLO_FOUND)
    add_definitions (-DMUNKRES_CPP_ARMADILLO)
endif ()
if (Boost_FOUND)
    add_definitions (-DMUNKRES_CPP_BOOST)
endif ()
if (EIGEN3_FOUND)
    add_definitions (-DMUNKRES_CPP_EIGEN3)
endif ()
if (OpenCV_FOUND)
    add_definitions (-DMUNKRES_CPP_OPENCV)
    set (CMAKE_EXE_LINKER_FLAGS "-l${OpenCV_LIBS}")
endif ()

include_directories (${OPENCV_INCLUDE_DIRS})
include_directories (${ARMADILLO_INCLUDE_DIRS})
include_directories (${EIGEN3_INCLUDE_DIR})

if (NOT DEFINED MUNKRES_CPP_VALUE_TYPE)
    set (MUNKRES_CPP_VALUE_TYPE long\ unsigned\ int)
endif ()
if (NOT DEFINED MUNKRES_CPP_MATRIX_TYPE)
    set (MUNKRES_CPP_MATRIX_TYPE matrix_eigen)
endif ()

add_definitions (-DMUNKRES_CPP_VALUE_TYPE=${MUNKRES_CPP_VALUE_TYPE})
add_definitions (-DMUNKRES_CPP_MATRIX_TYPE=${MUNKRES_CPP_MATRIX_TYPE})
add_subdirectory (tools/generator)
add_subdirectory (tests)
